# zapraid

./: .gitignore  README.md
mysql/: install.sh
patches/: cp_femu_files.sh
patches/zns_raid/: bdev_zns_raid.c  bdev_zns_raid.h  bdev_zns_raid_rpc.c
scripts/: one_in_all_install.sh
zapraid_prototype/scripts/: .gitignore  README.md  common.sh  exp0_motivating.sh  format.sh  gen.r  rw_md_test.sh
zapraid_prototype/scripts/exp1/: run_exp1.sh
zapraid_prototype/scripts/exp1/conf/: write_only.fio
zapraid_prototype/scripts/exp10.trace/: export.sh  output_data.sh  run_exp.sh  volume_list.txt  volume_list_small_writes.txt
zapraid_prototype/scripts/exp2/: run_exp2.sh  zns_raid_original.json
zapraid_prototype/scripts/exp2/conf/: test.fio
zapraid_prototype/scripts/exp3/: run_exp3.sh  zns_raid_original.json
zapraid_prototype/scripts/exp3/conf/: read_only.fio  write_only.fio
zapraid_prototype/scripts/exp4/: run_exp4.sh  zns_raid_original.json
zapraid_prototype/scripts/exp4/conf/: 64qd.fio
zapraid_prototype/scripts/exp5/: collect.sh  run_exp5.sh  zns_raid_original.json
zapraid_prototype/scripts/exp5/conf/: write_only.fio
zapraid_prototype/scripts/exp6/: run_recovery.sh
zapraid_prototype/scripts/exp7/: run_exp7.sh
zapraid_prototype/scripts/exp8.gc/: run_exp1.sh
zapraid_prototype/scripts/exp9.l2p/: run_exp1.sh
zapraid_prototype/scripts/raizn/: run_exp1.sh  test.sh  zns_raid_new.json
zapraid_prototype/scripts/raizn/conf/: write_only.fio
zapraid_prototype/scripts/real_applications/: 0_periodic_start.sh  0_start_spdk_nvmf_target.sh  1_start_nvmf.sh  3_reconnect_mount.sh  9_start_nvmf.sh  README  mysql_results.sh  mysql_start.sh  run_exp11-12.sh  sysbench.sh  zapraid_control.txt
zapraid_prototype/scripts/real_applications/abandoned/: 1_connect_nvmf.sh  2_mount_nvmf.sh
zapraid_prototype/scripts/real_applications/conf/: zns_raid_zapraid.json  zns_raid_zoneappend.json  zns_raid_zonewrite.json
zapraid_prototype/scripts/test/: device_test.sh  gc.sh  motivating.sh  run_exp1.sh  run_fio.sh  zns_raid_new.json
zapraid_prototype/scripts/test/conf/: gc.fio  write_only_verify.fio
zapraid_prototype/src/: CMakeLists.txt  check_correctness.cc  common.cc  common.h  configuration.h  debug.cc  debug.h  device.cc  device.h  indexmap.cc  indexmap.h  main.cpp  messages_and_functions.cc  messages_and_functions.h  raid_controller.cc  raid_controller.h  segment.cc  segment.h  simple_traffic_gen.cc  stats_recorder.cc  stats_recorder.h  test_rw.cc  trace.h  zns_raid.cc  zns_raid.h  zone.cc  zone.h
